<?xml version="1.0"?>
<package format="2">
  <name>cordial_face</name>
  <version>0.0.1</version>
  <description>A Javascript face that uses facial action units.</description>
  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
</package>
