<package>
  <name>cordial_tts2</name>
  <version>0.0.0</version>
  <description >

    An interface to Amazon's Polly service for text-to-speech, visemes (which are
    used for animation), and figuring out when to do gestures during speech.

  </description>
  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-boto3</build_depend>
  <build_depend>python-botocore</build_depend>
</package>


